[gd_scene load_steps=3 format=3 uid="uid://b2hx6wmmew2v2"]

[ext_resource type="Texture2D" uid="uid://dunsyxjwlib7w" path="res://Sprites/buttonForCat.png" id="1_7fk6n"]
[ext_resource type="Script" path="res://Scenes/bottom_panel.gd" id="1_bhkjg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bhkjg")

[node name="ButtonTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -63.9999
offset_top = -55.9999
offset_right = 16.0001
offset_bottom = 24.0001
scale = Vector2(1.6, 1.6)
texture = ExtResource("1_7fk6n")

[node name="Button" type="Button" parent="ButtonTexture"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CatPlacement" type="Sprite2D" parent="ButtonTexture"]
position = Vector2(32, 45)

[connection signal="button_down" from="ButtonTexture/Button" to="." method="_on_button_button_down"]
